--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.4",
     "@mui/icons-material": "^5.13.7",
+    "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.13.7",
+    "@mui/x-data-grid": "^6.9.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -24,17 +26,23 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "lightweight-charts": "^4.0.1",
+    "moment": "^2.29.4",
     "next": "13.4.8",
+    "notistack": "^3.0.1",
     "numbro": "^2.3.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.0.4"
   }
 }
