--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "start:dev": "next dev",
+    "start:staging": "next build && next start",
+    "start:prod": "next build && next start",
     "start": "next start",
     "lint": "next lint"
   },
