--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.4",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.136",
     "@mui/material": "^5.13.7",
@@ -30,6 +31,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "lightweight-charts": "^4.0.1",
+    "material-react-table": "^1.14.0",
     "moment": "^2.29.4",
     "next": "13.4.8",
     "notistack": "^3.0.1",
